# CryptoCurrencyApp

./: pyproject.toml  requirements.txt
docs/: README.md
src/: CryptoCurrencyApp.py  Management.py
tests/: test_CryptoCurrencyApp.py
