[tool.poetry]
name = "InstaScraper"
version = "0.1.0"
description = ""
authors = ["shervinbdndev <shervin2234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = ""
tk = ""
sv_ttk = ""
customtkinter = ""

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
